Fix typing being cutoff on Geckoview

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -36,9 +36,15 @@
 }
 
 /*Typing animation*/
+.typing-wrapper {
+  background-color: black;
+  width: 0px;
+  padding-left: 20px;
+}
 
 .typing-animation {
-  width: 9.4em;
+  width: 15.5ch;
+  padding: 0px;
   animation: typing 1.3s steps(22), blink 0.7s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
@@ -64,7 +70,6 @@
     background-attachment: scroll;
   }
 }
-
 
 /* Main */
 
@@ -115,7 +120,6 @@
   top: -10px;
 }
 
-
 .card-content-wrapper {
   height: 200px;
 }
@@ -128,7 +132,6 @@
 .card-content:hover {
   color: var(--text-color);
 }
-
 
 /* Media Queries */
 
@@ -191,7 +194,6 @@
   }
 }
 
-
 @media screen and (max-width: 480px) {
   .card-wrapper {
     display: block;
@@ -200,7 +202,7 @@
   }
   .card {
     margin: auto;
-    padding:1em;
+    padding: 1em;
     border-bottom: 1px solid grey;
     max-width: 98%;
   }
